--- a/markup/home/lesson1/index.html
+++ b/markup/home/lesson1/index.html
@@ -3,50 +3,33 @@
 <head lang="ru">
 	<meta charset="utf-8">
 	<title> Григоренко Ольга Нuколаевна</title>
-	 <style type="text/css">
-		 body {
-		 	font-size: 18px;
-		 }
-		h1 {
-			text-align: center;
-		}
-		img {
-			display: block;
-    		margin: 0 auto;
-		}
-		.list {
-			margin-left: 470px;
-		}
-
-		p { 
-			margin-left: 490px;
-		}
-	 </style>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<header>
-	<h1>Григоренко Ольга Николаевна</h1>
-	<img src="1.jpg" height="300" alt="Это я!">
-</header>
-<main>
-	<p class="centerParag">Студентка НТУУ"КПИ"</p>
-	<hr>
-	<p> Хочу быть фронтендером потому что:</p>
-	<div class="list">
-	<ul>
-		<li>мне это нравится</li>
-		<li>это интересно</li>
-		<li>минимальное общение с людьми</li>
-	</ul>
+<div class="container">
+	<div class="main">
+		<h2>Григоренко Ольга Николаевна</h2>
+		<div class="fotoUser"><img src="img/1.jpg" height="200" alt="Это я!"></div>
+		<p class="centerParag">Студентка НТУУ"КПИ"</p>
+		<hr>
+		<p> Хочу быть фронтендером потому что:</p>
+		<div class="list">
+		<ul>
+			<li>мне это нравится</li>
+			<li>это интересно</li>
+			<li>минимальное общение с людьми</li>
+		</ul>
+		</div>
+		<hr>
+		<p> Мой контактный телефон</p>
+		<p>+380935950123</p>
+		<br>
+		<p> Мой профиль вконтакте</p>
+		<p><a href="http://vk.com/bam_bee" target="_blank">vk.com</a></p>
+		<hr>
+		<p> Мой фидбэк</p>
+		<p>"Спортсменка, комсомолка и просто красавица" &#169</p>
 	</div>
-	<hr>
-	<p> Мой контактный телефон</p>
-	<p>+380935950123</p>
-	<p> Мой профиль вконтакте</p>
-	<p><a href="http://vk.com/bam_bee" target="_blank">vk.com</a></p>
-	<hr>
-	<p> Мой фидбэк</p>
-	<p>"Спортсменка, комсомолка и просто красавица" &#169</p>
-</main>
+</div>
 </body>
 </html>
