--- a/markup/home/lesson 3/index.html
+++ b/markup/home/lesson 3/index.html
@@ -11,22 +11,22 @@
 		<img class="headImg"src="img/logo.png">
 		<nav class="headNav">
 			<ul class="headMenu">
-				<li class="liInline">Главная</li>
-				<li class="liInline chakedNav">Товары</li>
-				<li class="liInline">О_нас</li>
-				<li class="liInline">Контакты</li>
+				<li class="liInline"><a class="aHead" href="#">Главная</a></li>
+				<li class="liInline chakedNav"><a class="aHead" href="#">Товары</li>
+				<li class="liInline"><a class="aHead" href="#">О_нас</li>
+				<li class="liInline"><a class="aHead" href="#">Контакты</li>
 			</ul>
 		</nav>
 	</header>
 
 	<aside>
 	<ul>
-		<li class="liAside">Ноутбуки</li>
-		<li class="liAside">Планшеты</li>
-		<li class="liAside chaked">Телефоны</li>
-		<li class="liAside">Телевизоры</li>
-		<li class="liAside">Бытовая техника</li>
-		<li class="liAside">Автотовары</li>
+		<li class="liAside"><a class="aAside"href="#">Ноутбуки</a></li>
+		<li class="liAside"><a class="aAside" href="#">Планшеты</a></li>
+		<li class="liAside"><a class="aAside" href="#">Телефоны</a></li>
+		<li class="liAside"><a class="aAside"href="#">Телевизоры</a></li>
+		<li class="liAside"><a class="aAside" href="#">Бытовая техника</a></li>
+		<li class="liAside"><a class="aAside" href="#">Автотовары</a></li>
 	</ul>
 	</aside>
 	<article>
@@ -35,10 +35,10 @@
 	</article>
 	<footer>
 		<ul class="ulFooter">
-			<li class="liFooter">Главная</li>
-			<li class="liFooter underLine">Товары</li>
-			<li class="liFooter">О_нас</li>
-			<li class="liFooter">Контакты</li>
+			<li class="liFooter"><a class="aFooter" href="#">Главная</a></li>
+			<li class="liFooter underLine"><a class="aFooter" href="#">Товары</a></li>
+			<li class="liFooter"><a class="aFooter" href="#">О_нас</a></li>
+			<li class="liFooter"><a class="aFooter" href="#">Контакты</a></li>
 		</ul>
 		<span>2014 © All rights reserved</span>
 	</footer>
