--- a/markup/home/lesson 3/index.html
+++ b/markup/home/lesson 3/index.html
@@ -12,13 +12,13 @@
 		<nav class="headNav">
 			<ul class="headMenu">
 				<li class="liInline"><a class="aHead" href="#">Главная</a></li>
-				<li class="liInline chakedNav"><a class="aHead" href="#">Товары</li>
-				<li class="liInline"><a class="aHead" href="#">О_нас</li>
-				<li class="liInline"><a class="aHead" href="#">Контакты</li>
+				<li class="liInline"><a class="aHead" href="#">Товары</a></li>
+				<li class="liInline"><a class="aHead" href="#">О_нас</a></li>
+				<li class="liInline"><a class="aHead" href="#">Контакты</a></li>
 			</ul>
 		</nav>
 	</header>
-
+<div class="maine">
 	<aside>
 	<ul>
 		<li class="liAside"><a class="aAside"href="#">Ноутбуки</a></li>
@@ -33,6 +33,7 @@
 		<img class="imgArticle"src="img/image.png">
 		<p class="acticalPar">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
 	</article>
+</div>
 	<footer>
 		<ul class="ulFooter">
 			<li class="liFooter"><a class="aFooter" href="#">Главная</a></li>
