--- a/markup/home/lesson 3/index.html
+++ b/markup/home/lesson 3/index.html
@@ -37,7 +37,7 @@
 	<footer>
 		<ul class="ulFooter">
 			<li class="liFooter"><a class="aFooter" href="#">Главная</a></li>
-			<li class="liFooter underLine"><a class="aFooter" href="#">Товары</a></li>
+			<li class="liFooter"><a class="aFooter" href="#">Товары</a></li>
 			<li class="liFooter"><a class="aFooter" href="#">О_нас</a></li>
 			<li class="liFooter"><a class="aFooter" href="#">Контакты</a></li>
 		</ul>
