--- a/markup/home/lesson1/index.html
+++ b/markup/home/lesson1/index.html
@@ -8,27 +8,30 @@
 <body>
 <div class="container">
 	<div class="main">
-		<h2>Григоренко Ольга Николаевна</h2>
-		<div class="fotoUser"><img src="img/1.jpg" height="200" alt="Это я!"></div>
-		<p class="centerParag">Студентка НТУУ"КПИ"</p>
-		<hr>
-		<p> Хочу быть фронтендером потому что:</p>
-		<div class="list">
-		<ul>
-			<li>мне это нравится</li>
-			<li>это интересно</li>
-			<li>минимальное общение с людьми</li>
-		</ul>
+		<div class="part">
+			<h2>Григоренко Ольга Николаевна</h2>
+			<div class="fotoUser"><img src="img/1.jpg" height="200" alt="Это я!"></div>
+			<span class="centerParag">Студентка НТУУ"КПИ"</span>
 		</div>
-		<hr>
-		<p> Мой контактный телефон</p>
-		<p>+380935950123</p>
-		<br>
-		<p> Мой профиль вконтакте</p>
-		<p><a href="http://vk.com/bam_bee" target="_blank">vk.com</a></p>
-		<hr>
-		<p> Мой фидбэк</p>
-		<p>"Спортсменка, комсомолка и просто красавица" &#169</p>
+		<div class="part">
+			<span> Хочу быть фронтендером потому что:</span>
+			<div class="list">
+			<ul>
+				<li>мне это нравится</li>
+				<li>это интересно</li>
+				<li>минимальное общение с людьми</li>
+			</ul>
+			</div>
+		</div>
+		<div class="part">
+			<span> Мой контактный телефон</span>
+			<span>+380935950123</span>
+			<br>
+			<span> Мой профиль вконтакте</span>
+			<span><a href="http://vk.com/bam_bee" target="_blank">vk.com</a></span>
+		</div>
+		<span> Мой фидбэк</span>
+		<span>"Спортсменка, комсомолка и просто красавица" &#169</span>
 	</div>
 </div>
 </body>
