--- a/markup/home/lesson 4/index.html
+++ b/markup/home/lesson 4/index.html
@@ -41,7 +41,7 @@
 						 	<img src="img/s_flag.png">
 						  	<figcaption><a href="#">Шри-Ланка</a></figcaption>
 						</figure>
-						<figure>
+						<figure class="last">
 						 	<img src="img/m_flag.png">
 						  	<figcaption><a href="#">Мальдивы</a></figcaption>
 					</figure>
