--- a/markup/home/lesson 3/index.html
+++ b/markup/home/lesson 3/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
 	<header>
-		<img class="headImg"src="img/logo.png">
+		<div class="headImg"><img src="img/logo.png"></div>
 		<nav class="headNav">
 			<ul class="headMenu">
 				<li class="liInline"><a class="aHead" href="#">Главная</a></li>
@@ -18,7 +18,7 @@
 			</ul>
 		</nav>
 	</header>
-<div class="maine">
+<div class="main clearfix">
 	<aside>
 	<ul>
 		<li class="liAside"><a class="aAside"href="#">Ноутбуки</a></li>
@@ -30,7 +30,7 @@
 	</ul>
 	</aside>
 	<article>
-		<img class="imgArticle"src="img/image.png">
+		<div class="imgArticle"><img src="img/image.png"></div>
 		<p class="acticalPar">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
 	</article>
 </div>
@@ -41,7 +41,7 @@
 			<li class="liFooter"><a class="aFooter" href="#">О_нас</a></li>
 			<li class="liFooter"><a class="aFooter" href="#">Контакты</a></li>
 		</ul>
-		<span>2014 © All rights reserved</span>
+		<div class="copyright">2014 © All rights reserved</div>
 	</footer>
 </div>
 </body>
