--- a/markup/home/lesson1/index.html
+++ b/markup/home/lesson1/index.html
@@ -16,22 +16,27 @@
 		<div class="part">
 			<span> Хочу быть фронтендером потому что:</span>
 			<div class="list">
-			<ul>
-				<li>мне это нравится</li>
-				<li>это интересно</li>
-				<li>минимальное общение с людьми</li>
-			</ul>
+				<ul>
+					<li>мне это нравится</li>
+					<li>это интересно</li>
+					<li>минимальное общение с людьми</li>
+				</ul>
 			</div>
 		</div>
 		<div class="part">
-			<span> Мой контактный телефон</span>
-			<span>+380935950123</span>
-			<br>
-			<span> Мой профиль вконтакте</span>
-			<span><a href="http://vk.com/bam_bee" target="_blank">vk.com</a></span>
+			<div class="contacts">
+				<span> Мой контактный телефон</span>
+				<span>+380935950123</span>
+			</div>
+			<div class="contacts">
+				<span> Мой профиль вконтакте</span>
+				<span><a href="http://vk.com/bam_bee" target="_blank">vk.com</a></span>
+			</div>
 		</div>
-		<span> Мой фидбэк</span>
-		<span>"Спортсменка, комсомолка и просто красавица" &#169</span>
+		<div class="footer">
+			<span> Мой фидбэк</span>
+			<span>"Спортсменка, комсомолка и просто красавица" &#169</span>
+		</div>
 	</div>
 </div>
 </body>
