--- a/markup/home/lesson 4/index.html
+++ b/markup/home/lesson 4/index.html
@@ -9,8 +9,9 @@
 <body>
 	<div class="container">
 		<header>
-			<img class="headerImg" src="img/logo.png">
-			<!-- <div class="imgTitle">Путешествия по Азии</div> -->
+			<div class="imgDiv">
+				<img class="headerImg" src="img/logo.png">
+			</div>
 			<div class="navHeader">
 				<div class="contacts">
 					<ul class="listContacts">
@@ -22,28 +23,40 @@
 				</div>
 				<div class="countries">
 					<figure>
+						<a href="#">
 						 	<img src="img/i_flag.png">
-						  	<figcaption><a href="#">Индия</a></figcaption>
+						  	<figcaption>Индия</figcaption>
+						 </a>
 						</figure>
 						<figure>
-						 	<img src="img/n_flag.png">
-						  	<figcaption><a href="#">Непал</a></figcaption>
+							<a href="#">
+							 	<img src="img/n_flag.png">
+							  	<figcaption>Непал</figcaption>
+						  	</a>
 						</figure>
 						<figure>
-						 	<img src="img/t_flag.png">
-						  	<figcaption><a href="#">Тибет</a></figcaption>
+							<a href="#">
+							 	<img src="img/t_flag.png">
+							  	<figcaption>Тибет</figcaption>
+						  	</a>
 						</figure>
 						<figure>
-						 	<img src="img/b_flag.png">
-						  	<figcaption><a href="#">Бутан</a></figcaption>
+							<a href="#">
+							 	<img src="img/b_flag.png">
+							  	<figcaption>Бутан</figcaption>
+							</a>
 						</figure>
 						<figure>
+						<a href="#">
 						 	<img src="img/s_flag.png">
-						  	<figcaption><a href="#">Шри-Ланка</a></figcaption>
+						  	<figcaption>Шри-Ланка</figcaption>
+						</a>
 						</figure>
 						<figure class="last">
-						 	<img src="img/m_flag.png">
-						  	<figcaption><a href="#">Мальдивы</a></figcaption>
+							<a href="#">
+							 	<img src="img/m_flag.png">
+							  	<figcaption>Мальдивы</figcaption>
+						  	</a>
 					</figure>
 				</div>
 			</div>
@@ -84,7 +97,7 @@
 				<li><a href="/">Контакты</a></li>
 			</ul>
 		</nav>
-		<div class="content">
+		<div class="content clearfix">
 			<div class="box1">
 				<h3>Информация</h3>
 				<ul>
