--- a/markup/home/lesson 6/index.html
+++ b/markup/home/lesson 6/index.html
@@ -163,7 +163,7 @@
 			<div class="tires right">
 				<h3 class="headerRight">ШИНЫ</h3>
 				<ul>
-					<li> &#10063Бренд 1</li>
+					<li> &#10063 Бренд 1</li>
 					<li> &#10063 Бренд 2</li>
 					<li> &#10063 Бренд 3</li>
 				</ul>
@@ -176,6 +176,7 @@
 					<li>&#10063 Бренд 3</li>
 				</ul>
 			</div>
+			<button class="check">Выбрать</button>
 		</div>
 	</div>
 	<div class="prefooter clearfix">
