--- a/markup/home/lesson 6/index.html
+++ b/markup/home/lesson 6/index.html
@@ -12,10 +12,10 @@
 		<div class="phone">(044)123-45-67 (044)567-89-10</div>
 		<div class="autorize">
 			<form>
-				<input type="text" placeholder="Username">
-				<input type="password" placeholder="Password"s>
-				<label>вход |</label>
-				<label>регистраци</label>
+				<input type="text" placeholder="логин">
+				<input type="password" placeholder="пароль">
+				<a href="#"><label>вход |</label></a>
+				<a href="#"><label>регистраци</label></a>
 				<button>забыли пароль?</button>
 			</form>
 		</div>
@@ -69,8 +69,7 @@
 			</div>
 			<div class="screw">
 					<div class="titleCol">
-					<!-- <img src="img/circ_icon.png" alt="" width="22" height="21"> -->
-					<span style="vertical-align:5px;">БОЛТЫ</span>
+					<span>БОЛТЫ</span>
 				</div>
 				<ul>
 					<li><a href="#">Наименование 1</a></li>
@@ -176,7 +175,7 @@
 					<li>&#10063 Бренд 3</li>
 				</ul>
 			</div>
-			<button class="check">Выбрать</button>
+			<button class="check">ВЫБРАТЬ</button>
 		</div>
 	</div>
 	<div class="prefooter clearfix">
