--- a/markup/home/Новая папка/base.html
+++ b/markup/home/Новая папка/base.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Asia Holidays</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/css.css">
 </head>
 <body>
 	<div class="container">
