--- a/markup/home/lesson 5/lesson 5 First task/index.html
+++ b/markup/home/lesson 5/lesson 5 First task/index.html
@@ -27,17 +27,17 @@
 			</div>
 			<div class="formGroup">
 				<div class="formContent">
-					<button class="facebook">
+					<a href="#"><button class="facebook">
                             <span class="facebook_left">f</span>
                             <span class="facebook_right">Login in <span class="thin">with</span> facebook</span>
-                        </button>
+                        </button></a>
 					<div class="or">OU</div>
 					<form>
-						<input type="text" class="textArea" name="fname" placeholder="First Name"><br>
-						<input type="text" class="textArea" name="lname" placeholder="Last Name"><br>
-						<input type="text"  class="textArea"name="email" placeholder="Email Adress"><br>
-						<input type="password" class="textArea" name="pass" placeholder="Choose Passsword"><br>
-						<input type="password"  class="textArea" name="passw" placeholder="Password Confirm"><br>
+						<label><input type="text" class="textArea" name="fname" placeholder="First Name"></label>
+						<label><input type="text" class="textArea" name="lname" placeholder="Last Name"><br></label>
+						<label><input type="text"  class="textArea"name="email" placeholder="Email Adress"><br></label>
+						<label><input type="password" class="textArea" name="pass" placeholder="Choose Passsword"><br></label>
+						<label><input type="password"  class="textArea" name="passw" placeholder="Password Confirm"><br></label>
 						<div class="checkDiv">
 						    <label><input type="checkbox" /> <span>Send me Youbike updates and tips</span></label>
 						 </div>
