--- a/markup/home/lesson 5/lesson 5 First task/index.html
+++ b/markup/home/lesson 5/lesson 5 First task/index.html
@@ -27,10 +27,10 @@
 			</div>
 			<div class="formGroup">
 				<div class="formContent">
-					<a href="#"><button class="facebook">
+					<button class="facebook"><a href="#">
                             <span class="facebook_left">f</span>
                             <span class="facebook_right">Login in <span class="thin">with</span> facebook</span>
-                        </button></a>
+                       </a></button>
 					<div class="or">OU</div>
 					<form>
 						<label><input type="text" class="textArea" name="fname" placeholder="First Name"></label>
