--- a/markup/home/lesson 6/index.html
+++ b/markup/home/lesson 6/index.html
@@ -15,7 +15,7 @@
 				<input type="text" placeholder="логин">
 				<input type="password" placeholder="пароль">
 				<a href="#"><label>вход |</label></a>
-				<a href="#"><label>регистраци</label></a>
+				<a href="#"><label> регистраци</label></a>
 				<button>забыли пароль?</button>
 			</form>
 		</div>
@@ -162,17 +162,17 @@
 			<div class="tires right">
 				<h3 class="headerRight">ШИНЫ</h3>
 				<ul>
-					<li> &#10063 Бренд 1</li>
-					<li> &#10063 Бренд 2</li>
-					<li> &#10063 Бренд 3</li>
+					<li><input type="checkbox"> Бренд 1</li>
+					<li><input type="checkbox"> Бренд 2</li>
+					<li><input type="checkbox"> Бренд 3</li>
 				</ul>
 			</div>
 			<div class="discs right">
 				<h3 class="headerRight">ДИСКИ</h3>
 				<ul>
-					<li>&#10063 Бренд 1</li>
-					<li>&#10063 Бренд 2</li>
-					<li>&#10063 Бренд 3</li>
+					<li><input type="checkbox"> Бренд 1</li>
+					<li><input type="checkbox"> Бренд 2</li>
+					<li><input type="checkbox"> Бренд 3</li>
 				</ul>
 			</div>
 			<button class="check">ВЫБРАТЬ</button>
