changed first task

--- a/js/home/lesson 1/first task.html
+++ b/js/home/lesson 1/first task.html
@@ -16,7 +16,7 @@
 		} else if (degree < 0) {
 			return 1/powing(num, Math.abs(degree));
 		} else {
-			return powing();
+			return powing(num, degree);
 		}
 
 		
