--- a/markup/home/lesson 6/index.html
+++ b/markup/home/lesson 6/index.html
@@ -20,18 +20,21 @@
 			</form>
 		</div>
 		<div class="headerMenu">
+			<a href="#"><img src="img/home.png"></a>
+			<a href="#"><img src="img/links.png"></a>
+			<a href="#"><img src="img/mail.png"></a>
 		</div>
 	</header>
 	<div class="slider">
 		<img src="img/blick copy.png">
 	</div>
-	<nav>
+	<nav class="clearfix">
 		<ul>
-			<li>О КОМПАНИ</li>
-			<li>ОПЛАТА</li>
-			<li>ДОСТАВКА</li>
-			<li>СТАТЬИ</li>
-			<li>КОНТАКТЫ</li>
+			<li><a class="navHref"href="#">О КОМПАНИ</a></li>
+			<li><a class="navHref" href="#">ОПЛАТА</a></li>
+			<li><a class="navHref" href="#">ДОСТАВКА</a></li>
+			<li><a class="navHref" href="#">СТАТЬИ</a></li>
+			<li><a class="navHref" href="#">КОНТАКТЫ</a></li>
 		</ul>
 		<div class="sale">
 			<ul>
@@ -40,7 +43,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="mainContainer">
+	<div class="mainContainer clearfix">
 		<div class="leftMenu">
 			<div class="colTitle">
 					<span>КАТАЛОГ ПРОДУКЦИИ:</span>
@@ -82,74 +85,74 @@
 		<div class="main">
 			<div class="goodsMain">
 				<div class="goods">
-					<h2>Goodyear</h2>
+					<h2><a href="#">Goodyear</a></h2>
 					<span class="subheader"> Ultra Grip Extreme</span>
 					<div class="imgContainer">
-						<img src="img/Layer5.png">
+						<a href="#"><img src="img/Layer5.png"></a>
 					</div>
 					<span class="price">90.00 <span class="uah">грн.</span></span>
 				</div>
 				<div class="goods">
-					<h2>Nokian</h2>
+					<h2><a href="#">Nokian</a></h2>
 					<span class="subheader">Hakkapeliitta R</span>
 					<div class="imgContainer">
-						<img src="img/Layer6.png">
+						<a href="#"><img src="img/Layer6.png"></a>
 					</div>
 					<span class="price">115.00 <span class="uah">грн.</span></span>
 				</div>
 				<div class="goods">
-					<h2>Hankook</h2>
+					<h2><a href="#">Hankook</a></h2>
 					<span class="subheader">K 708 155/65 R14</span>
 					<div class="imgContainer">
-						<img src="img/Layer7.png">
+						<a href="#"><img src="img/Layer7.png"></a>
 					</div>
 					<span class="price">393.00 <span class="uah">грн.</span></span>
 				</div>
 				<div class="goods">
-					<h2>Goodyear</h2>
+					<h2><a href="#">Goodyear</a></h2>
 					<span class="subheader"> Ultra Grip Extreme</span>
 					<div class="imgContainer">
-						<img src="img/Layer1.png">
+						<a href="#"><img src="img/Layer1.png"></a>
 					</div>
 					<span class="price">90.00 <span class="uah">грн.</span></span>
 				</div>
 				<div class="goods">
-					<h2>Nokian</h2>
+					<h2><a href="#">Nokian</a></h2>
 					<span class="subheader">Hakkapeliitta R</span>
 					<div class="imgContainer">
-						<img src="img/Layer2.png">
+						<a href="#"><img src="img/Layer2.png"></a>
 					</div>
 					<span class="price">115.00 <span class="uah">грн.</span></span>
 				</div>
 				<div class="goods">
-					<h2>Hankook</h2>
+					<h2><a href="#">Hankook</a></h2>
 					<span class="subheader">K 708 155/65 R14</span>
 					<div class="imgContainer">
-						<img src="img/Layer3copy.png">
+						<a href="#"><img src="img/Layer3copy.png"></a>
 					</div>
 					<span class="price">393.00 <span class="uah">грн.</span></span>
 				</div>
 				<div class="goods">
-					<h2>Goodyear</h2>
+					<h2><a href="#">Goodyear</a></h2>
 					<span class="subheader"> Ultra Grip Extreme</span>
 					<div class="imgContainer">
-						<img src="img/Layer1.png">
+						<a href="#"><img src="img/Layer1.png"></a>
 					</div>
 					<span class="price">90.00 <span class="uah">грн.</span></span>
 				</div>
 				<div class="goods">
-					<h2>Nokian</h2>
+					<h2><a href="#">Nokian</a></h2>
 					<span class="subheader">Hakkapeliitta R</span>
 					<div class="imgContainer">
-						<img src="img/Layer2.png">
+						<a href="#"><img src="img/Layer2.png"></a>
 					</div>
 					<span class="price">115.00 <span class="uah">грн.</span></span>
 				</div>
 				<div class="goods">
-					<h2>Hankook</h2>
+					<h2><a href="#">Hankook</a></h2>
 					<span class="subheader">K 708 155/65 R14</span>
 					<div class="imgContainer">
-						<img src="img/Layer3copy.png">
+						<a href="#"><img src="img/Layer3copy.png"></a>
 					</div>
 					<span class="price">393.00 <span class="uah">грн.</span></span>
 				</div>
