--- a/markup/home/lesson 6/index.html
+++ b/markup/home/lesson 6/index.html
@@ -11,13 +11,13 @@
 	<header>
 		<div class="phone">(044)123-45-67 (044)567-89-10</div>
 		<div class="autorize">
-			<form>
+		<div class="formAuto">
 				<input type="text" placeholder="логин">
 				<input type="password" placeholder="пароль">
-				<a href="#"><label>вход |</label></a>
-				<a href="#"><label> регистраци</label></a>
+				<label><a href="#">вход |</a></label>
+				<label><a href="#"> регистраци</a></label>
 				<button>забыли пароль?</button>
-			</form>
+		</div>
 		</div>
 		<div class="headerMenu">
 			<a href="#"><img src="img/home.png"></a>
