Added files via upload

--- a/markup/home/decorum_test/32_menu.html
+++ b/markup/home/decorum_test/32_menu.html
@@ -94,26 +94,26 @@
 </nav>
 
 <div class="content clearfix">
-	<div class="wrapper">
-		<aside>
-			<form class="content-search cleafix"action="//google.com/search" target="_blank">
-			    <input class="content-search_input" name="q" type="text" placeholder="Поиск.." />
-			    <input class="content-search_btn" type="image" src="img/search.svg" />
-			</form> 
-	
-			<div class="content-nav">
-				<h2 class="content-nav-header">Услуги</h2>
-				<ul class="content-nav-menu">
-					<li class="content-nav__item"><a class="content-nav__link" href="#">Обучение нанесению</a></li>
-					<li class="content-nav__item"><a class="content-nav__link" href="#">Услуги нанесения</a></li>
-					<li class="content-nav__item"><a class="content-nav__link" href="#">Аренда оборудования</a></li>
-					<li class="content-nav__item"><a class="content-nav__link" href="#">Выезд специалиста на объект</a></li>
-					<li class="content-nav__item"><a class="content-nav__link" href="#">Доставка</a></li>
-					<li class="content-nav__item"><a class="content-nav__link" href="#">Визуализация декоративных
-покрытий в интерьере</a></li>
-				</ul>
-			</div>
-		</aside>
+	<div class="wrapper clearfix">
+				<aside>
+					<form class="content-search cleafix"action="//google.com/search" target="_blank">
+					    <input class="content-search_input" name="q" type="text" placeholder="Поиск.." />
+					    <input class="content-search_btn" type="image" src="img/search.svg" />
+					</form> 
+			
+					<div class="content-nav">
+						<h2 class="content-nav-header">Услуги</h2>
+						<ul class="content-nav-menu">
+							<li class="content-nav__item"><a class="content-nav__link" href="#">Обучение нанесению</a></li>
+							<li class="content-nav__item"><a class="content-nav__link" href="#">Услуги нанесения</a></li>
+							<li class="content-nav__item"><a class="content-nav__link" href="#">Аренда оборудования</a></li>
+							<li class="content-nav__item"><a class="content-nav__link" href="#">Выезд специалиста на объект</a></li>
+							<li class="content-nav__item"><a class="content-nav__link" href="#">Доставка</a></li>
+							<li class="content-nav__item"><a class="content-nav__link" href="#">Визуализация декоративных
+		покрытий в интерьере</a></li>
+						</ul>
+					</div>
+				</aside>
 
 
 		<main class="main-block">
