Added files via upload

--- a/markup/home/decorum_test/32_menu.html
+++ b/markup/home/decorum_test/32_menu.html
@@ -78,14 +78,14 @@
 			<li class="nav-menu__item"><a class="nav-menu__link" href="#">Каталог покрытий</a></li>
 			<li class="nav-menu__item"><a class="nav-menu__link" href="#">Покрытия в интерьере</a></li>
 			<li class="nav-menu__item nav-menu__link_dropdown"><a class="nav-menu__link" href="#">Услуги</a>
-					<!-- <ul class="nav-menu__link_dropdown_content">
+					<ul class="nav-menu__link_dropdown_content">
 						<li class="nav-menu_dropdown__item"><a class="nav-menu_dropdown__link" href="#">Обучение нанесению</a></li>
 						<li class="nav-menu__link_dropdown__item"><a class="nav-menu_dropdown__link" href="#">Услуги нанесения</a></li>
 						<li class="nav-menu__link_dropdown__item"><a class="nav-menu_dropdown__link" href="#">Аренда оборудования</a></li>
 						<li class="nav-menu__link_dropdown__item"><a class="nav-menu_dropdown__link" href="#">Выезд специалиста на объект</a></li>
 						<li class="nav-menu__link_dropdown__item"><a class="nav-menu_dropdown__link" href="#">Доставка</a></li>
 						<li class="nav-menu__link_dropdown__item"><a class="nav-menu_dropdown__link" href="#"></a>Визуализация декоративных покрытий в интерьере</li>
-					</ul> -->
+					</ul>
 			</li>
 			<li class="nav-menu__item"><a class="nav-menu__link" href="#">О компании</a></li>
 			<li class="nav-menu__item"><a class="nav-menu__link" href="#">Контакты</a></li>
