Added files via upload

--- a/markup/home/Technotendencyltd/index.html
+++ b/markup/home/Technotendencyltd/index.html
@@ -34,20 +34,21 @@
                 </ul>
             </div>
             <div class="header_logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="img/logo.png">
                 </a>
             </div>
             <div class="nav">
                 <ul class="nav_list clearfix">
-                    <li class="nav_item"><a class="nav_item_link" href="index.html">Главная</a></li>
+                    <li class="nav_item"><a class="nav_item_link active" href="index.html">Главная</a></li>
                     <li class="nav_item"><a class="nav_item_link" href="about_us.html">О компании</a></li>
                     <li class="nav_item dropdown"><a class="nav_item_link" href="#">Услуги</a>
                       <div class="dropdownMenu">
                           <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 2</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 3</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 4</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 5</a></div>
                       </div>
                     </li>
                     <li class="nav_item"><a class="nav_item_link" href="news.html">Новости</a></li>
