--- a/markup/home/Technotendencyltd/contacts.html
+++ b/markup/home/Technotendencyltd/contacts.html
@@ -14,6 +14,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- main_header -->
@@ -33,7 +34,7 @@
                 </ul>
             </div>
             <div class="header_logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="img/logo.png">
                 </a>
             </div>
@@ -44,13 +45,14 @@
                     <li class="nav_item dropdown"><a class="nav_item_link" href="#">Услуги</a>
                       <div class="dropdownMenu">
                           <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 2</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 3</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 4</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 5</a></div>
                       </div>
                     </li>
                     <li class="nav_item"><a class="nav_item_link" href="news.html">Новости</a></li>
-                    <li class="nav_item"><a class="nav_item_link" href="contacts.html">Контакты</a></li>
+                    <li class="nav_item"><a class="nav_item_link active" href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
      </div>
