--- a/markup/home/Technotendencyltd/news.html
+++ b/markup/home/Technotendencyltd/news.html
@@ -14,6 +14,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- main_header -->
@@ -33,7 +34,7 @@
                 </ul>
             </div>
             <div class="header_logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="img/logo.png">
                 </a>
             </div>
@@ -44,12 +45,13 @@
                     <li class="nav_item dropdown"><a class="nav_item_link" href="#">Услуги</a>
                       <div class="dropdownMenu">
                           <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
-                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 1</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 2</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 3</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 4</a></div>
+                          <div class="dropdownMenu_item"><a class="dropdownMenu_item_link" href="services.html">Услуга 5</a></div>
                       </div>
                     </li>
-                    <li class="nav_item"><a class="nav_item_link" href="news.html">Новости</a></li>
+                    <li class="nav_item"><a class="nav_item_link active" href="news.html">Новости</a></li>
                     <li class="nav_item"><a class="nav_item_link" href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
@@ -63,45 +65,61 @@
         <div class="news_wrapper">
             <div class="news_item clearfix">
                 <div class="news_header clearfix">
-                    <h2 class="news_head">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
+                    <h2 class="news_head news_head1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
                     <div class="news_time">23.12.2016</div>
                 </div>
                 <div class="news_content clearfix">
-                    <div class="news_img"><img src="img/5.png"></div>
-                    <p class="news_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+                    <div class="news_img news_img1"><img src="img/5.png"></div>
+                    <p class="news_description news_description1 news_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
 m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde </p>
                 </div>
             </div>
             <div class="news_item clearfix">
                 <div class="news_header clearfix">
-                    <h2 class="news_head">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
+                    <h2 class="news_head news_head2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
                     <div class="news_time">23.12.2016</div>
                 </div>
                 <div class="news_content clearfix">
-                    <div class="news_img"><img src="img/2.png"></div>
-                    <p class="news_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+                    <div class="news_img news_img2"><img src="img/2.png"></div>
+                    <p class="news_description news_description2 news_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
 m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde </p>
                 </div>
             </div>
             <div class="news_item clearfix">
                 <div class="news_header clearfix">
-                    <h2 class="news_head">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
+                    <h2 class="news_head news_head3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
                     <div class="news_time">23.12.2016</div>
                 </div>
                 <div class="news_content clearfix">
-                    <div class="news_img"><img src="img/5.png"></div>
-                    <p class="news_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+                    <div class="news_img news_img3"><img src="img/5.png"></div>
+                    <p class="news_description news_description3 news_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
 m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde </p>
                 </div>
             </div>
             <div class="news_item clearfix">
                 <div class="news_header clearfix">
-                    <h2 class="news_head">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
+                    <h2 class="news_head news_head4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
                     <div class="news_time">23.12.2016</div>
                 </div>
                 <div class="news_content clearfix">
-                    <div class="news_img"><img src="img/2.png"></div>
-                    <p class="news_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+                    <div class="news_img news_img4"><img src="img/2.png"></div>
+                    <p class="news_description news_description4 news_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde </p>
+                </div>
+            </div>
+            <div class="news_item clearfix">
+                <div class="news_header clearfix">
+                    <h2 class="news_head news_head5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</h2>
+                    <div class="news_time">23.12.2016</div>
+                </div>
+                <div class="news_content clearfix">
+                    <div class="news_img news_img5"><img src="img/5.png"></div>
+                    <p class="news_description news_description5 news_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
+m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia
 m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde </p>
                 </div>
             </div>
