Added files via upload

--- a/markup/home/Technotendencyltd/index.html
+++ b/markup/home/Technotendencyltd/index.html
@@ -33,9 +33,9 @@
                     <li class="lang_item"><a class="lang_item_link" href="#"><img src="img/en.png"></a></li>
                 </ul>
             </div>
-            <div class="header_logo">
+            <div class="header_logo clearfix">
                 <a href="index.html">
-                    <img src="img/logo.png">
+                    <img class="header_logo_img" src="img/logo.svg">
                 </a>
             </div>
             <div class="nav">
@@ -102,7 +102,7 @@
             <div class="footer_logo_container">
                 <div class="footer_logo">
                     <a href="#">
-                        <img src="img/logo_footer.png">
+                        <img class="footer_img"src="img/logo—futersvg.svg">
                     </a>
                 </div>
                 <div class="footer_description">
