Added files via upload

--- a/markup/home/Technotendencyltd/about_us.html
+++ b/markup/home/Technotendencyltd/about_us.html
@@ -100,7 +100,7 @@
             <div class="footer_logo_container">
                 <div class="footer_logo">
                     <a href="#">
-                        <img class="footer_img"src="img/logo—futersvg.svg">
+                        <img src="img/logo_footer.png">
                     </a>
                 </div>
                 <div class="footer_description">
