--- a/markup/home/Technotendencyltd/contacts.html
+++ b/markup/home/Technotendencyltd/contacts.html
@@ -90,9 +90,9 @@ m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conse
     <div class="footer_line"></div>
         <div class="wrapper_footer clearfix">
             <div class="footer_logo_container">
-               <div class="footer_logo">
+                <div class="footer_logo">
                     <a href="#">
-                        <img class="footer_img"src="img/logo—futersvg.svg">
+                        <img src="img/logo_footer.png">
                     </a>
                 </div>
                 <div class="footer_description">
