--- a/markup/home/Technotendencyltd/news.html
+++ b/markup/home/Technotendencyltd/news.html
@@ -136,7 +136,7 @@ m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conse
             <div class="footer_logo_container">
                 <div class="footer_logo">
                     <a href="#">
-                        <img class="footer_img"src="img/logo—futersvg.svg">
+                        <img src="img/logo_footer.png">
                     </a>
                 </div>
                 <div class="footer_description">
