Added files via upload

--- a/markup/home/Technotendencyltd/index.html
+++ b/markup/home/Technotendencyltd/index.html
@@ -59,9 +59,42 @@
 </header>
 
 
+<div id="content">
+        <div class="content_wrapper">
+        <div class="slider_list">
+            <img src="img/left.svg" class="arrow prev" alt="">
+            <img src="img/right.svg" class="arrow next" alt="">
+            <div class="slider_item active_slider" style="background: url(img/7.png) no-repeat center center; background-size: cover">
+                <div class="carousel_text_wrapper">
+                    <div class="carousel_text">
+                        <h2 class="carousel_header"><span class="text_blue">Lorem ipsum dolor</span> sit amesectetur adipisicing elised do eiusmod tempor</h2>
+                        <p class="carousel_text_item"><span class="text_blue">Lorem ipsum dolor sit amet</span> consectetur adipisеicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim vetruullaris nisi ut</p>
+                    </div>
+                </div>
+            </div>
+            <div class="slider_item" style="background: url(img/main_img2_2_1920x550.jpg) no-repeat center center; background-size: cover">
+                <div class="carousel_text_wrapper">
+                    <div class="carousel_text">
+                        <h2 class="carousel_header"><span class="text_blue">Lorem ipsum dolor</span> sit amesectetur adipisicing elised do eiusmod tempor</h2>
+                        <p class="carousel_text_item"><span class="text_blue">Lorem ipsum dolor sit amet</span> consectetur adipisеicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim vetruullaris nisi ut</p>
+                    </div>
+                </div>
+            </div>
+            <div class="slider_item" style="background: url(img/main_img2_3_1920x550.jpg) no-repeat center center; background-size: cover" >
+                <div class="carousel_text_wrapper">
+                    <div class="carousel_text">
+                        <h2 class="carousel_header"><span class="text_blue">Lorem ipsum dolor</span> sit amesectetur adipisicing elised do eiusmod tempor</h2>
+                        <p class="carousel_text_item"><span class="text_blue">Lorem ipsum dolor sit amet</span> consectetur adipisеicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim vetruullaris nisi ut</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
 
 <div class="main_container">
-    <main class="main_wrapper">
+    <main class="main_wrapper index_container">
         <div class="about_us_acticle clearfix">
             <div class="about_us_photoes clearfix">
                 <div class="about_us_main_photo"><img src="img/3.png"></div>
@@ -94,8 +127,7 @@
 </div>
 
 
-<footer>
-    
+<footer>  
     <div class="footer_container">
     <div class="footer_line"></div>
         <div class="wrapper_footer clearfix">
