--- a/markup/home/Technotendencyltd/contacts.html
+++ b/markup/home/Technotendencyltd/contacts.html
@@ -74,8 +74,8 @@ m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conse
                     <input  class="form_input" type="email" pattern="[^ @]*@[^ @]*" placeholder="Введите ваш Email"></br>
                     <input class="form_input" type="text" placeholder="Тема сообщения"></br>
                     <input type="text" class="form_input_code" placeholder="Введите код"></br>
-                    <textarea name="comment" form="usrform" class="form_input_message" placeholder="Введите ваше сообщение"></textarea>
-                    <input type="submit" class="reset" value="Сбросить"><input type="submit" class="submit_button" value="Отправить сообщение">
+                    <textarea name="comment" class="form_input_message" placeholder="Введите ваше сообщение"></textarea>
+                    <input type="reset" class="reset" value="Сбросить"><input type="submit" class="submit_button" value="Отправить сообщение">
                 </form>
                 <div style="margin-top: 30px;margin-bottom: 150px;width:470px;overflow:hidden;height:371px;max-width:100%;"><div id="my-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=улица+Урловская+36+/8,+Киев,+город+Киев,+Украина&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe></div><a class="google-maps-html" rel="nofollow" href="https://www.dog-checks.com" id="enable-map-data">www.dog-checks.com</a><style>#my-map-display .text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div><script src="https://www.dog-checks.com/google-maps-authorization.js?id=07ed5547-ff99-c211-fc53-42ac486b4884&c=google-maps-html&u=1461573673" defer="defer" async="async"></script>
     
@@ -92,7 +92,7 @@ m, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conse
             <div class="footer_logo_container">
                 <div class="footer_logo">
                     <a href="#">
-                        <img src="img/logo_footer.png">
+                        <img src="img/logo—futersvg.svg ">
                     </a>
                 </div>
                 <div class="footer_description">
