Added files via upload

--- a/markup/home/pagination/index.html
+++ b/markup/home/pagination/index.html
@@ -157,8 +157,8 @@
     <hr />
     <div class="pagination">
         <ul>
-            <li><a href="#" id="prev" class="prevnext">Previous</a></li>
-            <li><a href="#" id="next" class="prevnext">Next</a></li>
+            <li><a href="#" id="prev" class="prevnext"> << </a></li>
+            <li><a href="#" id="next" class="prevnext"> >> </a></li>
         </ul>
         <br />
         <div id="page_number" class="page_number">1</div>
